test/lit/pto/tquant_mx_verify_invalid_a5.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @tquant_mx_verify_invalid_a5() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=48, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=i8, rows=16, cols=64, v_row=16, v_col=48, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %exp = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=ui8, rows=1, cols=32, v_row=1, v_col=24, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %max = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=1, cols=32, v_row=1, v_col=24, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %scaling = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=48, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    pto.tquant.mx ins(%src : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=48, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
                  outs(%dst, %exp, %max, %scaling : !pto.tile_buf<loc=vec, dtype=i8, rows=16, cols=64, v_row=16, v_col=48, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=ui8, rows=1, cols=32, v_row=1, v_col=24, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=f32, rows=1, cols=32, v_row=1, v_col=24, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=48, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
                  {quant_type = #pto<quant_type MXFP8>}
    return
  }
}

// CHECK: error: 'pto.tquant.mx' op expects src valid_shape[1] to be a multiple of 32 for tquant.mx
